--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
-    "surrealdb.js": "^0.5.0",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "surrealdb.js": "^0.5.0"
   }
 }
